environements/dev/notes/statefulset copy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notes
spec:
  securityContext:
    runAsNoRoot: true
    readOnlyRootFileSystem: true
    allowPriviligeEscalation: false
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
    supplementalGroups: [4000]
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: notes
        image: abdelhak245/kube-notes:v1.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: notes
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: notes
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 500Mi
